[tool.poetry]
name = "pyfenecon"
version = "0.1.2"
description = ""
authors = ["Fabian Bühler <buehler.fabian@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyfenecon = "pyfenecon.__main__:main"
